Fix: In HtmlFileInput: URL.toURI() exists since 1.5, thanks to Marc for figuring this out.
git-svn-id: http://svn.code.sf.net/p/htmlunit/code/trunk/htmlunit@1494 5f5364db-9458-4db8-a492-e30667be6df6